crates/plotnik-lib/tests/05-typegen/quantifiers/error_star_internal_capture_needs_row.txt
Bad = {
  (identifier) @a
  (number) @b
}*
==== diagnostics ====
error: captures `@a`, `@b` repeat with `*` but aren't collected into a list
 --> query.ptk:1:7
  |
1 |   Bad = {
  |  _______^
2 | |   (identifier) @a
3 | |   (number) @b
4 | | }*
  | |__^
  |
help: add a row capture so each repeat becomes one element: `{...}* @items`
help: or discard the captures if only the structure matters: `{...}* @_`
